--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/bmo-database
+MONGODB_DB_NAME=bmo-database
 JWT_SECRET=your_jwt_secret_key_change_in_production
 JWT_EXPIRE=7d
 NODE_ENV=development
